# sfml_learn_00

./: .gitignore  CMakeLists.txt  game.cpp  game.h  main.cpp
animation/: animator.cpp  animator.h
entities/: bonus.cpp  bonus.h  character.cpp  character.h  dot.cpp  dot.h  ghost.cpp  ghost.h  pacwoman.cpp  pacwoman.h
states/: gamestate.cpp  gamestate.h  getreadystate.cpp  getreadystate.h  loststate.cpp  loststate.h  nocoinstate.cpp  nocoinstate.h  playingstate.cpp  playingstate.h  wonstate.cpp  wonstate.h
